tests/rosetta/out/Rust/call-a-function-4.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /tmp/call-a-function-4.rs:6:119
  |
6 |         let mut opts: std::collections::HashMap<&'static str, i32> = { let mut m = std::collections::BTreeMap::new(); m };
  |                                                                                                                       ^ expected `HashMap<&str, i32>`, found `BTreeMap<_, _>`
  |
  = note: expected struct `HashMap<&'static str, i32>`
             found struct `BTreeMap<_, _>`

error[E0308]: arguments to this function are incorrect
 --> /tmp/call-a-function-4.rs:8:9
  |
8 |         gifEncode((), (), opts);
  |         ^^^^^^^^^ --  -- expected `i32`, found `()`
  |                   |
  |                   expected `i32`, found `()`
  |
note: function defined here
 --> /tmp/call-a-function-4.rs:3:8
  |
3 |     fn gifEncode(out: i32, img: i32, opts: std::collections::HashMap<&'static str, i32>) -> () {
  |        ^^^^^^^^^ --------  --------

warning: unused variable: `out`
 --> /tmp/call-a-function-4.rs:3:18
  |
3 |     fn gifEncode(out: i32, img: i32, opts: std::collections::HashMap<&'static str, i32>) -> () {
  |                  ^^^ help: if this is intentional, prefix it with an underscore: `_out`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: unused variable: `img`
 --> /tmp/call-a-function-4.rs:3:28
  |
3 |     fn gifEncode(out: i32, img: i32, opts: std::collections::HashMap<&'static str, i32>) -> () {
  |                            ^^^ help: if this is intentional, prefix it with an underscore: `_img`

warning: unused variable: `opts`
 --> /tmp/call-a-function-4.rs:3:38
  |
3 |     fn gifEncode(out: i32, img: i32, opts: std::collections::HashMap<&'static str, i32>) -> () {
  |                                      ^^^^ help: if this is intentional, prefix it with an underscore: `_opts`

error: aborting due to 2 previous errors; 3 warnings emitted

For more information about this error, try `rustc --explain E0308`.
