tests/rosetta/out/Rust/call-a-function-4.rs
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
fn main() {
    fn gifEncode(out: i32, img: i32, opts: std::collections::HashMap<&'static str, i32>) -> () {
    }
    fn main() -> () {
        let mut opts: std::collections::HashMap<&'static str, i32> = { let mut m = std::collections::BTreeMap::new(); m };
        opts.insert("NumColors", 16);
        gifEncode((), (), opts);
    }
    main();
}
